--- a/P2 Code/P2 Code.csproj
+++ b/P2 Code/P2 Code.csproj
@@ -59,7 +59,7 @@
       <DependentUpon>FormSeeFish.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,12 +90,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FishPics\Crappie.png" />
-    <Content Include="FishPics\Perch.png" />
-    <Content Include="FishPics\Walleye.jpg" />
-    <Content Include="FishPics\__MACOSX\._Crappie.png" />
-    <Content Include="FishPics\__MACOSX\._Perch.png" />
-    <Content Include="FishPics\__MACOSX\._Walleye.jpg" />
+    <Content Include="Properties\Resources\Crappie.png" />
+    <Content Include="Properties\Resources\Perch.png" />
+    <Content Include="Properties\Resources\Walleye.jpg" />
+    <Content Include="Properties\Resources\__MACOSX\._Crappie.png" />
+    <Content Include="Properties\Resources\__MACOSX\._Perch.png" />
+    <Content Include="Properties\Resources\__MACOSX\._Walleye.jpg" />
+    <None Include="Resources\Walleye.jpg" />
+    <None Include="Resources\Perch.png" />
+    <None Include="Resources\Crappie.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
